# link_aggregator

./: .gitignore  README.md  makefile  pyproject.toml
django_app/: settings.py  urls.py
django_app/links_api/: models.py  serializers.py  urls.py  views.py
django_app/links_api/migrations/: 0001_initial.py  0002_alter_link_updated.py
django_app/links_api/tests/: test_endpoints.py
