[tool.poetry]
name = "link_aggregator"
version = "0.1.0"
description = ""
authors = ["ivanpobeguts <Ivan.Pobeguc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
